# ILI9341_lvgl_driver_for_RP2040

./: CMakeLists.txt  ili9341.c  ili9341.h  lcdTest.c  lcdTest.cpp  pio_spi.h  readme.md  xpt2046.c  xpt2046.h
